5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1637_2445.log
== TEST (2019-04-09 11:05:06) 
-- CODE:
escala = input("C ou F: ")
temp = float(input("temperatura: "))
if(F):
	x = 5/9 * (F - 32)
	print(x)
else:
	y = ((9 * c) / 5) + 32
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(F):
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:05:34) 
-- CODE:
escala = input("C ou F: ")
temp = float(input("temperatura: "))
if("F"):
	x = 5/9 * (F - 32)
	print(x)
else:
	y = ((9 * c) / 5) + 32
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = 5/9 * (F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:06:10) 
-- CODE:
escala = input("C ou F: ")
temp = float(input("temperatura: "))
if(escala == F):
	x = 5/9 * (F - 32)
	print(x)
else:
	y = ((9 * c) / 5) + 32
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(escala == F):
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:06:31) 
-- CODE:
escala = input("C ou F: ")
temp = float(input("temperatura: "))
if(escala == "F"):
	x = 5/9 * (F - 32)
	print(x)
else:
	y = ((9 * c) / 5) + 32
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    y = ((9 * c) / 5) + 32
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:07:16) 
-- CODE:
escala = input("C ou F: ")
temp = float(input("temperatura: "))
if(escala == "F"):
	x = 5/9 * (temp - 32)
	print(x)
else:
	y = ((9 * temp) / 5) + 32
	print(y)
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:07:29) 
-- CODE:
escala = input("C ou F: ")
temp = float(input("temperatura: "))
if(escala == "F"):
	x = 5/9 * (temp - 32)
	print(x)
else:
	y = ((9 * temp) / 5) + 32
	print(y)
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:07:48) 
-- CODE:
escala = input("C ou F: ")
temp = float(input("temperatura: "))
if(escala == "F"):
	x = 5/9 * (temp - 32)
	print(x)
else:
	y = ((9 * temp) / 5) + 32
	print(y)
-- EXECUTION TIME:
0.143151
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:08:07) 
-- CODE:
escala = input("C ou F: ")
temp = float(input("temperatura: "))
if(escala == "F"):
	x = 5/9 * (temp - 32)
	print(x)
else:
	y = ((9 * temp) / 5) + 32
	print(y)
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:08:47) 
-- CODE:
escala = input("C ou F: ")
temp = float(input("temperatura: "))
if(escala == "F"):
	x = 5/9 * (temp - 32)
	print(x)
else:
	y = ((9 * temp) / 5) + 32
	print(y)
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:08:57) 
-- CODE:
escala = input("C ou F: ")
temp = float(input("temperatura: "))
if(escala == "F"):
	x = 5/9 * (temp - 32)
	print(x)
else:
	y = ((9 * temp) / 5) + 32
	print(y)
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:09:52) 
-- CODE:
escala = input("C ou F: ").upper()
temp = float(input("temperatura: "))
if(escala == "F"):
	x = 5/9 * (temp - 32)
	print(x)
else:
	y = ((9 * temp) / 5) + 32
	print(y)
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
